@@ -1,3 +1,9 @@
+2005-04-15  Alan Modra  <amodra@bigpond.net.au>
+
+	PR ld/815
+	* elflink.c (elf_smash_syms): Clear undef.next if it's not being
+	used as a list pointer.
+
 2005-04-05  Richard Sandiford  <rsandifo@redhat.com>
 
 	* elfxx-mips.c (MIPS_ELF_OPTIONS_SECTION_NAME_P): New macro.
